# Clockwork-TestScene

./: .gitattributes  .gitignore  Cargo.toml
models/: dice.mtl
src/: assets.rs  main.rs
src/systems/: camera_control.rs  gui.rs  load_save.rs  load_scene.rs  mod.rs
